@@ -1,3 +1,7 @@
+2009-11-06  Xavier Perseguers  <typo3@perseguers.ch>
+
+	* Fixed bug: tables and fields were not always properly mapped in INNER JOINs
+
 2009-11-05  Xavier Perseguers  <typo3@perseguers.ch>
 
 	* Set version to 0.9.24
